--- a/calculator-app/public/index.html
+++ b/calculator-app/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,26 +22,27 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <div id='root'>
-    </div>
-    <svg id ='ocean' preserveAspectRatio="none" shape-rendering="auto" viewBox="0 24 100 28" >
-      <defs>
-        <path id='path'class='wave1'd="M-130 47
+  <title>React App</title>
+</head>
+
+<body>
+  <div id='root'>
+  </div>
+  <svg id='ocean' preserveAspectRatio="none" shape-rendering="auto" viewBox="0 24 100 28">
+    <defs>
+      <path id='path' class='wave1' d="M-130 47
                             c30 10 58-15 88-20
                             s58 18 88 18 58-18 88-18 58 28 88 18 
-                            v44h-352z"></path>  
-      </defs>  
-      <g class="risingWaves">
-        <use href="#path"  x="48" y="5" fill="#003366" opacity="0.9" />
-        <use href="#path" x="48" y="5" fill=" #EBF4FA" opacity="0.8"/>
-        <use href="#path" x="48" y="7" fill="#145DA0" opacity="0.4" />
-        <use href="#path" x="48" y="5" fill="rgba(160, 212, 275, 0.7)" />
-        <use href="#path" x="48" y="7" fill="#145DA0" opacity="0.8" />
-      </g>
-    </svg>
-  </body>
-</html>
+                            v44h-352z"></path>
+    </defs>
+    <g class="risingWaves">
+      <use href="#path" x="48" y="5" fill="#003366" opacity="0.9" />
+      <use href="#path" x="48" y="5" fill=" #EBF4FA" opacity="0.8" />
+      <use href="#path" x="48" y="7" fill="#145DA0" opacity="0.4" />
+      <use href="#path" x="48" y="5" fill="rgba(160, 212, 275, 0.7)" />
+      <use href="#path" x="48" y="7" fill="#145DA0" opacity="0.8" />
+    </g>
+  </svg>
+</body>
 
+</html>
